project/tests/in_progress/for_main/bad/types/type_casting/type_int32_to_int64x.c
#include <stdio.h>

int i1 = 0x98765432;
long int i2 = 0x9876543210123456l;

int main() {
  printf("%x\n", i1);
  printf("%lx\n", i2);
//  printf("%lx\n", (long int)i1);
  i2 = (long int)i1;
  printf("%lx\n", i2);
  return 0;
}
